[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/ui/sketch_control/LogPopout.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
shadow_color = Color( 0, 0, 0, 0.207843 )
shadow_size = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.137255 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.243137 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[node name="LogPopout" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -1.0
margin_right = -2.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 360 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 128
custom_constants/margin_top = 64
custom_constants/margin_left = 128
custom_constants/margin_bottom = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 1152.0
margin_bottom = 656.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 592.0

[node name="Control" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 32.0
mouse_filter = 1

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_left = 992.0
margin_right = 1024.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/Control"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = " Copy to Clipboard "

[node name="TextAttach" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer/TextAttach"]
margin_left = 8.0
margin_right = 1016.0
margin_bottom = 556.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_colors/selection_color = Color( 0.439216, 0.439216, 0.439216, 0.4 )
scroll_following = true
selection_enabled = true
